--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,602 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #001f23;
+  -webkit-font-smoothing: antialiased;
+  font-family: "A Pompadour W05 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  position: relative;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none;
+}
+
+.logo{
+  width: 35px;
+  height: 30px;
+  object-fit: cover;
+}
+
+/* HAMBURGER STYLES */
+
+.hamburger-icon {
+  display: none;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 40px;
+}
+
+.hamburger-icon > * {
+  width: 40px;
+  height: 3.5px;
+  background-color:#17e2ad;
+  transition: all 0.5s;
+}
+
+.bar-second {
+  margin: 5px 0;
+  width: 33px;
+} 
+
+.bar-third{
+  width: 25px;
+}
+
+.cross > * {
+  width: 40px;
+  transition: all 0.4s;
+}
+
+.cross div:nth-of-type(1){
+  position: relative;
+  top: 3.5px;
+  transform: rotate(225deg);
+  transition: all 0.5s;
+}
+
+.cross div:nth-of-type(2){
+  opacity: 0;
+  display: none;
+  transition: all 0.5s;
+}
+
+.cross div:nth-of-type(3){
+  transform: rotate(-225deg);
+  transition: all 0.5s;
+}
+
+/* HEADER SECTION */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+  background-color:#001f23;
+  
+  font-size: 20px;
+  width: 95%;
+  margin: 0 auto;
+  transition: top 0.5s;
+  color: #82F8CE;
+}
+
+.header ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.header li a{
+  margin-right: 15px;
+  width: 90px;
+  padding: 3px;
+  text-align: center;
+  font-size: 20px;
+  color: #17e2ad;
+  letter-spacing: 0.8px;
+  line-height: 150%;
+  font-weight: 400;
+}
+
+.header li:hover{
+  cursor: pointer;
+}
+
+.menu > li a {
+  color: #17e2ad;
+}
+
+.moveUp {
+  top: -100%;
+  transition: top 1.2s;  
+}
+
+/* MAIN SECTION*/
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 130px 0;
+  height: 90vh;
+  font-family: sans-serif;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.main div:nth-of-type(1) {
+  font-size: 70px;
+  margin-bottom: 20px;
+  color: #e4fff8;
+}
+
+.main div:nth-of-type(2) {
+  font-size: 35px;
+  margin-bottom: 25px;
+  color: #89a49d;
+}
+
+.main div:nth-of-type(3) {
+  font-size: calc(26px + 20 * ((50vw - 320px) / 1320));
+  margin-bottom: 50px;
+  max-width: 720px;
+  color: #17e2ad;
+
+  letter-spacing: 0.024em;
+}
+
+.main div:nth-of-type(4) a {
+  width: 175px;
+  font-size: 20px;
+  background-color: transparent;
+  padding: 15px 15px;
+  color:#17e2ad;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #17e2ad;
+}
+
+.mail-icon {
+  font-size: 25px;
+  background-color: transparent;
+}
+
+/* ABOUT SECTION */
+
+.about-container {
+  width: 840px;
+  margin: 0 auto;
+  min-height: 90vh;
+  padding: 12vh 0;
+}
+
+.about-intro {
+  margin-bottom: 50px;
+  color: #e4fff8;
+}
+
+.about-intro p:nth-of-type(1){
+  font-weight: bold;
+  font-size: 30px;
+  font-family: sans-serif;
+}
+
+.about-intro p:nth-of-type(2){
+  color:#8893af;
+}
+
+.about {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  color: #525e65;
+  font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+.about-image {
+  width: 240px;
+  border-radius: 10px;
+  background-color: #e3e0f3;
+  display: block;
+  object-fit: contain;
+}
+
+.about-image-mobile {
+  display: none;
+  width: 31.25%;
+  height: 300px;
+  border-radius: 10px;
+  background-color: #e3e0f3;
+  object-fit: contain;
+}
+
+.about-description{
+  margin-right: 20px;
+  text-align: start;
+  font-family: "A Pompadour W05 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  color:#8893af;
+  letter-spacing: 0.7px;
+
+  width: 65%;
+}
+
+.about-description > div:nth-of-type(1) {
+  font-size: 20px;
+}
+
+.about-description > div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-end; */
+}
+
+.skills-container{
+  margin-top: 30px;
+}
+
+.skills {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-start;
+  text-align: start;
+  font-weight:900;
+  font-size: 15px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.skills div:nth-of-type(2) {
+  margin: 0 15px;
+}
+
+.skill-arrow {
+  color:#17e2ad;
+  font-size: 10px;
+  margin-right: 10px;
+}
+
+
+.resume {
+  width: 175px;
+  font-size: 20px;
+  background-color: transparent;
+  padding: 15px 15px;
+  color:#17e2ad;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #17e2ad;
+  margin-top: 35px;
+}
+
+.resume > a {
+  color: #17e2ad;
+}
+
+/* PROJECT SECTION */
+
+.projects {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.project-images {
+  position: sticky;
+  top: 28%;
+  /* bottom: 28%; */
+
+  height: 350px;
+  width: 40%;
+  margin-right: 5%;
+
+  border-radius: 40px;
+}
+
+.project-images > img {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  border-radius: 40px;
+}
+
+.project-description {
+  width: 40%;
+}
+
+.project-description > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: auto 0;
+}
+
+.project-description div div:nth-of-type(1), .project-description div div:nth-of-type(2), .project-description div div:nth-of-type(4) {
+  color: #90f5d0;
+}
+
+.project-description div div:nth-of-type(1){
+  line-height: 116%;
+  letter-spacing: 0.02em;
+  font-family: "A Pompadour Bold W00 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-size: calc(24px + 14 * ((100vw - 320px) / 1320));
+}
+
+.project-description div div:nth-of-type(2) {
+    margin: 0;
+    line-height: 100%;
+    letter-spacing: -0.01em;
+    font-family: "A Pompadour Bold W00 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+    margin-left: -4px;
+    margin-top: 16px;
+    font-size: calc(68px + 68 * ((100vw - 320px) / 1320));
+}
+
+.project-description div div:nth-of-type(4) {
+  font-size: calc(17px + 5 * ((100vw - 320px) / 1320));
+  font-family: "A Pompadour Bold W00 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  margin: 0;
+  letter-spacing: 0.04em;
+  color: #82F8CE;
+}
+
+
+.project-description div div:nth-of-type(3) {
+  color: #90F4D0;
+  font-size: calc(17px + 7 * ((100vw - 320px) / 1320));
+  line-height: 124%;
+  letter-spacing: 0.035em;
+  margin: 24px 0 24px;
+  opacity: 0.86;
+  font-family: "A Pompadour W05 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+.responsive_project_image {
+  display: none;
+}
+
+/* FOOTER SECTION */
+.footer {
+  color: #90f5d0;
+  padding: 32px 68px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end ;
+}
+
+.footer div:nth-of-type(1)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin-top: -1px;
+  height: 0.75px;
+  display: block;
+  background-image: linear-gradient(90deg, rgb(194, 249, 115) 0%, rgb(141, 243, 255) 12%, rgb(203, 195, 217) 20%, rgb(203, 195, 217) 26%, rgb(153, 252, 186) 36%, rgb(89, 207, 239) 50%, rgb(194, 249, 115) 62%, rgb(141, 243, 255) 74%, rgb(203, 195, 217) 86%, rgb(203, 195, 217) 94%, rgb(89, 207, 239) 100%);
+  animation: gradient 15s ease infinite;
+  background-size: 200% 200%;
+}
+
+.footer div:nth-of-type(2) div:nth-of-type(1) {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer div:nth-of-type(2) div:nth-of-type(1) > a {
+  color: #82F8CE;
+  font-size: 25px;
+}
+/* DESKTOP VIEW */ 
+@media only screen and (min-width: 601px) {
+  .project-description > div {
+    height: 100vh;
+  }
+}
+
+/* MOBILE VIEW */
+
+@media only screen and (max-width: 600px) {
+  
+  /* HAMBURGER SECTION */
+  .header {
+    padding: 10px;
+  }
+
+  .hamburger-icon {
+    display: flex;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    right: -100%;
+    top: 0;
+    height: 100vh;
+    width: 70vw;
+    background-color:#01282d;
+    padding-top: 15vh;
+    transition: all 0.5s;
+  }
+
+  .menu > li {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .menu > li:hover {
+    color: #404a4f;
+  }
+
+  .menu > * {
+    margin-bottom: 30px;
+    color: whitesmoke;
+    text-align: center;
+  }
+
+  .menu * a {
+    color: whitesmoke;
+  }
+
+  .menu-toggle{
+    right: 0;
+    transition: all 0.5s;
+  }
+
+  .cross {
+    padding-top: 10px;
+  }
+
+  .cross > *{
+    z-index: 2;
+    background-color: white;
+  }
+
+  /* MAIN SECTION */
+  .main {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+
+  /* ABOUT SECTION */
+
+  .about-container {
+    width: 90%;
+    margin: 0 auto;
+    height: auto;
+  }
+
+  .about-intro {
+    padding: 0;
+  }
+  
+  .about {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    color: #525e65;
+    font-family:Georgia, 'Times New Roman', Times, serif
+  }
+
+  .about-image {
+    display: none;
+  }
+  
+  .about-image-mobile {
+    width: 240px;
+    height: auto;
+    border-radius: 10px;
+    background-color: #e3e0f3;
+    margin-top: 30px;
+    display: block;
+  }
+  
+  .about-description{
+    width: 100%;
+    text-align: start;
+    font-family: sans-serif;
+  }
+
+  .skills-container{
+    margin-top: 30px;
+  }
+  
+  .skills {
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-start;
+    text-align: start;
+    font-weight: 800;
+    font-size: 13px;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .skills > div:nth-of-type(2) {
+    margin:0 30px;
+  }
+
+  .skill-arrow{
+    color: #6c55e0;
+    font-size: 8px;
+    margin-right: 5px;
+  }
+
+  /* PROJECT SECTION */
+
+  .project-images {
+    display: none;
+  }
+
+  .project-description {
+    width: 100%;
+  }
+
+  .project-description > div {
+    margin-top: 100px;
+  }
+
+  .responsive_project_image {
+    display: block;
+    border-radius: 20px;
+    height: 20%;
+    width: 80%;
+    margin: 30px 0 12px 0;
+  }
+
+  .footer {
+    height: 15vh;
+    margin-top: 100px;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center ;
+  }
+
+  .footer div:nth-of-type(1) {
+    order: 2;
+  }
+
+   .footer div:nth-of-type(2) > div:nth-of-type(1) {
+    margin-bottom: 15px;
+    width: 100%;
+    /* border: 1px solid red; */
+  }
+
+  .footer div:nth-of-type(2) {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer div:nth-of-type(2) > div:nth-of-type(2) {
+    order: 2;
+  }
+
+  .footer div:nth-of-type(2) > div:nth-of-type(1) a {
+    color: rgb(251, 246, 246);
+    font-size: 35px;
+  }
+
 }
