--- a/src/index.css
+++ b/src/index.css
@@ -283,6 +283,21 @@ a {
 
 /* PROJECT SECTION */
 
+/* .projects::before {
+  content: 'Some Of My Implementations';
+  display: block;
+  position: absolute;
+  height: 10vh;
+  width: 100%;
+} */
+
+.project-heading {
+ color: #e4fff8;
+ width: 80%; 
+ margin: 50px auto;
+}
+
+
 .projects {
   display: flex;
   justify-content: center;
@@ -543,6 +558,19 @@ a {
 
   /* PROJECT SECTION */
 
+  .project-heading {
+    width: 90%;
+    margin: 70px auto;
+  }
+
+  .project-heading::after {
+    content: "";
+    display: block;
+    background-color: #aeb3be;
+    height: 1px;
+    width: 80%;
+  }
+
   .project-images {
     display: none;
   }
@@ -552,7 +580,7 @@ a {
   }
 
   .project-description > div {
-    margin-top: 100px;
+    margin-bottom: 100px;
   }
 
   .responsive_project_image {
@@ -563,9 +591,10 @@ a {
     margin: 30px 0 12px 0;
   }
 
+  /* FOOTER */
+
   .footer {
     height: 15vh;
-    margin-top: 100px;
     padding: 20px 10px;
     display: flex;
     flex-direction: column;
