--- a/src/index.css
+++ b/src/index.css
@@ -118,8 +118,22 @@ a {
   cursor: pointer;
 }
 
+.menu {
+  display: flex;
+  align-items: center;
+}
+
 .menu > li a {
   color: #17e2ad;
+}
+
+.menu li:nth-of-type(3) a {
+  border-width: 1px;
+  border-style: solid;
+  border-image: linear-gradient(90deg, rgb(194, 249, 115) 0%, rgb(141, 243, 255) 12%, rgb(203, 195, 217) 20%, rgb(203, 195, 217) 26%, rgb(153, 252, 186) 36%, rgb(89, 207, 239) 50%, rgb(194, 249, 115) 62%, rgb(141, 243, 255) 74%, rgb(203, 195, 217) 86%, rgb(203, 195, 217) 94%, rgb(89, 207, 239) 100%) 15;
+  animation: border 2s ease infinite;
+  padding: 8px 10px;
+  text-align: center;
 }
 
 .moveUp {
@@ -195,7 +209,7 @@ a {
 
 .about-intro p:nth-of-type(1){
   font-weight: bold;
-  font-size: 30px;
+  font-size: 40px;
   font-family: sans-serif;
 }
 
@@ -305,6 +319,14 @@ a {
  margin: 50px auto;
 }
 
+.project-heading::after {
+  content: "";
+  display: block;
+  background-color: #aeb3be;
+  height: 2px;
+  width: 5%;
+}
+
 
 .projects {
   display: flex;
@@ -318,22 +340,21 @@ a {
 .project-images {
   position: sticky;
   top: 28%;
-
   height: 350px;
   width: 40%;
   margin-right: 5%;
-
   border-radius: 40px;
 }
 
 .project-images > img {
   position: absolute;
-
   width: 100%;
   height: 100%;
   object-fit: cover;
-
   border-radius: 40px;
+  opacity: 0;
+  transform: translate(0px, 0px);
+  scale: (1, 1);
 }
 
 .project-description {
@@ -360,7 +381,6 @@ a {
 .project-description div div:nth-of-type(2) {
   display: flex;
   align-items: flex-end;
-
   margin-top: 16px;
 }
 
@@ -456,13 +476,92 @@ a {
   font-size: 25px;
 }
 /* DESKTOP VIEW */ 
-@media only screen and (min-width: 601px) {
+@media only screen and (max-width: 3441px) and (min-width:1201px){
+  .project-description > div {
+    height: 80vh;
+  }
+
+  .project-description > div:nth-of-type(4) {
+    height: 1000px;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width:1200px) {
   .project-description > div {
     height: 100vh;
   }
 
-  .project-description div:nth-of-type(4) {
+  .project-description > div:nth-of-type(4) {
     height: 430px;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 840px){
+   /* ABOUT SECTION */
+
+   .about-container {
+    width: 90%;
+    margin: 0 auto;
+    height: auto;
+  }
+
+  .about-intro {
+    padding: 0;
+  }
+  
+  .about {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: flex-start;
+    color: #525e65;
+    font-family:Georgia, 'Times New Roman', Times, serif
+  }
+
+  .about-image {
+    /* display: none; */
+    background-color: #e3e0f3;
+    width: 240px;
+    height: auto;
+  }
+  
+  .about-image-mobile {
+    width: 240px;
+    height: auto;
+    border-radius: 10px;
+    background-color: #e3e0f3;
+    margin-top: 30px;
+    display: none;
+  }
+  
+  .about-description{
+    width: 100%;
+    text-align: start;
+    font-family: sans-serif;
+  }
+
+  .skills-container{
+    margin-top: 30px;
+  }
+  
+  .skills {
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-start;
+    text-align: start;
+    font-weight: 800;
+    font-size: 13px;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .skills > div:nth-of-type(2) {
+    margin:0 30px;
+  }
+
+  .skill-arrow{
+    color: #6c55e0;
+    font-size: 8px;
+    margin-right: 5px;
   }
 }
 
@@ -601,11 +700,8 @@ a {
 
   .project-heading {
     width: 90%;
-    font-size: 20px;
-  }
-
-  .projects {
-    margin-bottom: 0;
+    font-weight: bold;
+    font-size: 37px;
   }
 
   .project-heading::after {
@@ -614,6 +710,10 @@ a {
     background-color: #aeb3be;
     height: 1px;
     width: 80%;
+  }
+
+  .projects {
+    margin-bottom: 0;
   }
 
   .project-images {
@@ -668,6 +768,7 @@ a {
 
   .footer div:nth-of-type(1) {
     order: 2;
+    padding-bottom: 10px;
   }
 
    .footer div:nth-of-type(2) > div:nth-of-type(1) {
