--- a/src/index.css
+++ b/src/index.css
@@ -355,6 +355,8 @@ a {
   opacity: 0;
   transform: translate(0px, 0px);
   scale: (1, 1);
+
+  transition: opacity 0.5s linear;
 }
 
 .project-description {
