--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ a {
   object-fit: cover;
 }
 
+.header div:nth-of-type(1) {
+  z-index: 2;
+}
+
 /* HAMBURGER STYLES */
 
 .hamburger-icon {
@@ -95,6 +99,10 @@ a {
   top: 0;
   transition: all 1s;
   z-index: 5;
+}
+
+.translucent {
+  display: none;
 }
 
 .header ul {
@@ -592,9 +600,6 @@ a {
     /* border: 1px solid red; */
     display: flex;
   }
-  /* .project-description > div:nth-of-type(4) {
-    height: 800px;
-  } */
 }
 
 /* MOBILE VIEW */
@@ -610,14 +615,28 @@ a {
     display: flex;
   }
 
+  .drawing-menu {
+    display: flex;
+    position: fixed;
+    height: 100vh;
+    right: -100%;
+    top: 0;
+    transition: all 0.5s;
+  }
+
+  .translucent {
+    display: block;
+    height: 100%;
+    width: 30vw;
+    opacity: 0.5;
+    background-color: #374844;
+  }
+
   .menu {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
-    right: -100%;
-    top: 0;
-    height: 100vh;
+    height: 100%;
     width: 70vw;
     background-color:#01282d;
     padding-top: 15vh;
@@ -823,5 +842,10 @@ a {
     color: rgb(251, 246, 246);
     font-size: 35px;
   }
+}
 
+@media only screen and (max-width:290px) {
+  .about-container {
+    margin-top: 200px;
+  }
 }
