--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 body {
   background-color: #001f23;
   -webkit-font-smoothing: antialiased;
-  font-family: "A Pompadour W05 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: "A Pompadour W05 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   position: relative;
 
   max-width: 1200px;
@@ -22,7 +23,7 @@ a {
   text-decoration: none;
 }
 
-.logo{
+.logo {
   width: 35px;
   height: 30px;
   object-fit: cover;
@@ -44,16 +45,16 @@ a {
 .hamburger-icon > * {
   width: 40px;
   height: 3.5px;
-  background-color:#17e2ad;
+  background-color: #17e2ad;
   transition: all 0.5s;
 }
 
 .bar-second {
   margin: 5px 0;
   width: 33px;
-} 
+}
 
-.bar-third{
+.bar-third {
   width: 25px;
 }
 
@@ -62,20 +63,20 @@ a {
   transition: all 0.4s;
 }
 
-.cross div:nth-of-type(1){
+.cross div:nth-of-type(1) {
   position: relative;
   top: 3.5px;
   transform: rotate(225deg);
   transition: all 0.5s;
 }
 
-.cross div:nth-of-type(2){
+.cross div:nth-of-type(2) {
   opacity: 0;
   display: none;
   transition: all 0.5s;
 }
 
-.cross div:nth-of-type(3){
+.cross div:nth-of-type(3) {
   transform: rotate(-225deg);
   transition: all 0.5s;
 }
@@ -87,18 +88,19 @@ a {
   justify-content: space-between;
   align-items: center;
   height: 10vh;
-  background-color:#001f23;
-  
+  background-color: #001f23;
+
   font-size: 20px;
   width: 95%;
   margin: 0 auto;
   transition: top 0.5s;
-  color: #82F8CE;
+  color: #82f8ce;
 
   position: sticky;
   top: 0;
   transition: all 1s;
   z-index: 5;
+  padding: 50px 0;
 }
 
 .translucent {
@@ -110,7 +112,7 @@ a {
   list-style-type: none;
 }
 
-.header li a{
+.header li a {
   margin-right: 15px;
   width: 90px;
   padding: 3px;
@@ -122,7 +124,7 @@ a {
   font-weight: 400;
 }
 
-.header li:hover{
+.header li:hover {
   cursor: pointer;
 }
 
@@ -138,7 +140,21 @@ a {
 .menu li:nth-of-type(3) a {
   border-width: 1px;
   border-style: solid;
-  border-image: linear-gradient(90deg, rgb(194, 249, 115) 0%, rgb(141, 243, 255) 12%, rgb(203, 195, 217) 20%, rgb(203, 195, 217) 26%, rgb(153, 252, 186) 36%, rgb(89, 207, 239) 50%, rgb(194, 249, 115) 62%, rgb(141, 243, 255) 74%, rgb(203, 195, 217) 86%, rgb(203, 195, 217) 94%, rgb(89, 207, 239) 100%) 15;
+  border-image: linear-gradient(
+      90deg,
+      rgb(194, 249, 115) 0%,
+      rgb(141, 243, 255) 12%,
+      rgb(203, 195, 217) 20%,
+      rgb(203, 195, 217) 26%,
+      rgb(153, 252, 186) 36%,
+      rgb(89, 207, 239) 50%,
+      rgb(194, 249, 115) 62%,
+      rgb(141, 243, 255) 74%,
+      rgb(203, 195, 217) 86%,
+      rgb(203, 195, 217) 94%,
+      rgb(89, 207, 239) 100%
+    )
+    15;
   animation: border 2s ease infinite;
   padding: 8px 10px;
   text-align: center;
@@ -146,7 +162,7 @@ a {
 
 .moveUp {
   top: -100%;
-  transition: top 1.2s;  
+  transition: top 1.2s;
 }
 
 /* MAIN SECTION*/
@@ -188,7 +204,7 @@ a {
   font-size: 20px;
   background-color: transparent;
   padding: 15px 15px;
-  color:#17e2ad;
+  color: #17e2ad;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
@@ -203,26 +219,26 @@ a {
 
 /* ABOUT SECTION */
 
-.about-container {
+.about-container, .experience-container{
   width: 840px;
   margin: 0 auto;
   min-height: 90vh;
   padding: 12vh 0;
 }
 
-.about-intro {
+.about-intro, .experience-heading {
   margin-bottom: 50px;
   color: #e4fff8;
 }
 
-.about-intro p:nth-of-type(1){
+.about-intro p:nth-of-type(1), .experience-heading {
   font-weight: bold;
   font-size: 40px;
   font-family: sans-serif;
 }
 
-.about-intro p:nth-of-type(2){
-  color:#8893af;
+.about-intro p:nth-of-type(2) {
+  color: #8893af;
 }
 
 .about {
@@ -230,13 +246,13 @@ a {
   justify-content: space-between;
   width: 100%;
   color: #525e65;
-  font-family:Georgia, 'Times New Roman', Times, serif
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .about-image {
   width: 300px;
   border-radius: 10px;
-  background-color:#aadacd;
+  background-color: #aadacd;
   display: block;
   object-fit: contain;
   overflow: hidden;
@@ -247,21 +263,22 @@ a {
   width: 31.25%;
   height: 300px;
   border-radius: 10px;
-  background-color:#80c4b2;
+  background-color: #80c4b2;
   object-fit: contain;
 }
 
-.about-description{
+.about-description {
   margin-right: 20px;
   text-align: start;
-  font-family: "A Pompadour W05 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
-  color:#8893af;
+  font-family: "A Pompadour W05 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  color: #8893af;
   letter-spacing: 0.7px;
 
   width: 65%;
 }
 
-.about-description > div:nth-of-type(1) {
+.about-description > div:nth-of-type(1), .experience-content > div:nth-of-type(1){
   font-size: 20px;
 }
 
@@ -270,7 +287,7 @@ a {
   flex-direction: column;
 }
 
-.skills-container{
+.skills-container {
   margin-top: 30px;
 }
 
@@ -279,9 +296,9 @@ a {
   display: flex;
   justify-content: flex-start;
   text-align: start;
-  font-weight:900;
+  font-weight: 900;
   font-size: 15px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .skills div:nth-of-type(2) {
@@ -289,18 +306,17 @@ a {
 }
 
 .skill-arrow {
-  color:#17e2ad;
+  color: #17e2ad;
   font-size: 10px;
   margin-right: 10px;
 }
-
 
 .resume {
   width: 175px;
   font-size: 20px;
   background-color: transparent;
   padding: 15px 15px;
-  color:#17e2ad;
+  color: #17e2ad;
   border-radius: 5px;
   text-align: center;
   border: 1px solid #17e2ad;
@@ -309,6 +325,29 @@ a {
 
 .resume > a {
   color: #17e2ad;
+}
+
+/* Experience Section */
+.experience-container{
+  min-height: 90vh;
+}
+
+.experience-content{
+  text-align: start;
+  font-family: "A Pompadour W05 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  color: #8893af;
+  letter-spacing: 0.7px;
+}
+
+.experience-content > div:nth-of-type(1){
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+.experience-work {
+  font-size: 20px;
+  margin-top: 20px;
 }
 
 /* PROJECT SECTION */
@@ -322,19 +361,18 @@ a {
 } */
 
 .project-heading {
- color: #e4fff8;
- width: 80%; 
- margin: 50px auto;
+  color: #e4fff8;
+  width: 80%;
+  margin: 50px auto;
 }
 
-.project-heading::after {
+.project-heading::after, .experience-heading::after {
   content: "";
   display: block;
   background-color: #aeb3be;
   height: 2px;
   width: 5%;
 }
-
 
 .projects {
   display: flex;
@@ -377,14 +415,17 @@ a {
   justify-content: flex-start;
 }
 
-.project-description div div:nth-of-type(1), .project-description div div:nth-of-type(2), .project-description div div:nth-of-type(4) {
+.project-description div div:nth-of-type(1),
+.project-description div div:nth-of-type(2),
+.project-description div div:nth-of-type(4) {
   color: #90f5d0;
 }
 
-.project-description div div:nth-of-type(1){
+.project-description div div:nth-of-type(1) {
   line-height: 116%;
   letter-spacing: 0.02em;
-  font-family: "A Pompadour Bold W00 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: "A Pompadour Bold W00 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: calc(24px + 14 * ((100vw - 320px) / 1320));
 }
 
@@ -395,14 +436,15 @@ a {
 }
 
 .project-description div div:nth-of-type(2) div:nth-of-type(1) {
-    margin: 0;
-    line-height: 100%;
-    letter-spacing: -0.01em;
-    font-family: "A Pompadour Bold W00 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
-    margin-left: -4px;
-    margin-top: 16px;
-    margin-bottom: -15px;
-    font-size: calc(68px + 68 * ((100vw - 320px) / 1320));
+  margin: 0;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  font-family: "A Pompadour Bold W00 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  margin-left: -4px;
+  margin-top: 16px;
+  margin-bottom: -15px;
+  font-size: calc(68px + 68 * ((100vw - 320px) / 1320));
 }
 
 .project-description div div:nth-of-type(2) div:nth-of-type(2) {
@@ -419,7 +461,7 @@ a {
   margin-left: 40px;
 }
 
-.project-description div div:nth-of-type(2) div:nth-of-type(2) > a{
+.project-description div div:nth-of-type(2) div:nth-of-type(2) > a {
   color: #17e2ad;
 }
 
@@ -429,21 +471,22 @@ a {
 
 .project-description div div:nth-of-type(4) {
   font-size: calc(17px + 5 * ((100vw - 320px) / 1320));
-  font-family: "A Pompadour Bold W00 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: "A Pompadour Bold W00 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   margin: 0;
   letter-spacing: 0.04em;
-  color: #82F8CE;
+  color: #82f8ce;
 }
 
-
 .project-description div div:nth-of-type(3) {
-  color: #90F4D0;
+  color: #90f4d0;
   font-size: calc(17px + 7 * ((100vw - 320px) / 1320));
   line-height: 124%;
   letter-spacing: 0.035em;
   margin: 24px 0 24px;
   opacity: 0.86;
-  font-family: "A Pompadour W05 Regular","Helvetica Neue Light","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: "A Pompadour W05 Regular", "Helvetica Neue Light",
+    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 .responsive_project_image {
@@ -457,7 +500,7 @@ a {
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end ;
+  align-items: flex-end;
 }
 
 .footer div:nth-of-type(1)::after {
@@ -471,7 +514,20 @@ a {
   margin-top: -1px;
   height: 0.75px;
   display: block;
-  background-image: linear-gradient(90deg, rgb(194, 249, 115) 0%, rgb(141, 243, 255) 12%, rgb(203, 195, 217) 20%, rgb(203, 195, 217) 26%, rgb(153, 252, 186) 36%, rgb(89, 207, 239) 50%, rgb(194, 249, 115) 62%, rgb(141, 243, 255) 74%, rgb(203, 195, 217) 86%, rgb(203, 195, 217) 94%, rgb(89, 207, 239) 100%);
+  background-image: linear-gradient(
+    90deg,
+    rgb(194, 249, 115) 0%,
+    rgb(141, 243, 255) 12%,
+    rgb(203, 195, 217) 20%,
+    rgb(203, 195, 217) 26%,
+    rgb(153, 252, 186) 36%,
+    rgb(89, 207, 239) 50%,
+    rgb(194, 249, 115) 62%,
+    rgb(141, 243, 255) 74%,
+    rgb(203, 195, 217) 86%,
+    rgb(203, 195, 217) 94%,
+    rgb(89, 207, 239) 100%
+  );
   animation: gradient 15s ease infinite;
   background-size: 200% 200%;
 }
@@ -482,16 +538,16 @@ a {
 }
 
 .footer div:nth-of-type(2) div:nth-of-type(1) > a {
-  color: #82F8CE;
+  color: #82f8ce;
   font-size: 25px;
 }
-/* DESKTOP VIEW */ 
-@media only screen and (max-width: 3441px) and (min-width:1801px){
+/* DESKTOP VIEW */
+@media only screen and (max-width: 3441px) and (min-width: 1801px) {
   .project-description > div {
     height: 80vh;
   }
 
-  .project-images{
+  .project-images {
     border: 1px solid red;
   }
 
@@ -500,7 +556,9 @@ a {
   }
 }
 
-@media only screen and (min-width: 767px) and (max-width:1900px) {
+@media only screen and (min-width: 767px) and (max-width: 1900px) {
+  
+
   .project-description > div {
     height: 1200vh;
   }
@@ -523,10 +581,10 @@ a {
   }
 }
 
-@media only screen and (min-width: 601px) and (max-width: 840px){
-   /* ABOUT SECTION */
+@media only screen and (min-width: 601px) and (max-width: 840px) {
+  /* ABOUT SECTION */
 
-   .about-container {
+  .about-container {
     width: 90%;
     margin: 0 auto;
     height: auto;
@@ -535,14 +593,14 @@ a {
   .about-intro {
     padding: 0;
   }
-  
+
   .about {
     display: flex;
     width: 100%;
     flex-direction: row;
     align-items: flex-start;
     color: #525e65;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, "Times New Roman", Times, serif;
   }
 
   .about-image {
@@ -551,7 +609,7 @@ a {
     width: 240px;
     height: auto;
   }
-  
+
   .about-image-mobile {
     width: 240px;
     height: auto;
@@ -560,17 +618,17 @@ a {
     margin-top: 30px;
     display: none;
   }
-  
-  .about-description{
+
+  .about-description {
     width: 100%;
     text-align: start;
     font-family: sans-serif;
   }
 
-  .skills-container{
+  .skills-container {
     margin-top: 30px;
   }
-  
+
   .skills {
     margin-top: 30px;
     display: flex;
@@ -578,37 +636,40 @@ a {
     text-align: start;
     font-weight: 800;
     font-size: 13px;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  .skills > div:nth-of-type(2) {
-    margin:0 30px;
+    font-family: "Courier New", Courier, monospace;
   }
 
-  .skill-arrow{
+  .skills > div:nth-of-type(2) {
+    margin: 0 30px;
+  }
+
+  .skill-arrow {
     color: #6c55e0;
     font-size: 8px;
     margin-right: 5px;
   }
+  
 
   .project-description > div {
     height: 100vh;
   }
 
   .project-description > div {
-    
     /* border: 1px solid red; */
     display: flex;
+  }
+  .experience-container {
+    width: 90%
   }
 }
 
 /* MOBILE VIEW */
 
 @media only screen and (max-width: 600px) {
-  
   /* HAMBURGER SECTION */
   .header {
-    padding: 10px;
+    /* padding: 10px; */
+    padding: 50px 0;
   }
 
   .hamburger-icon {
@@ -638,7 +699,7 @@ a {
     align-items: center;
     height: 100%;
     width: 70vw;
-    background-color:#01282d;
+    background-color: #01282d;
     padding-top: 15vh;
     transition: all 0.5s;
   }
@@ -662,7 +723,7 @@ a {
     color: whitesmoke;
   }
 
-  .menu-toggle{
+  .menu-toggle {
     right: 0;
     transition: all 0.5s;
   }
@@ -671,7 +732,7 @@ a {
     padding-top: 10px;
   }
 
-  .cross > *{
+  .cross > * {
     z-index: 2;
     background-color: white;
   }
@@ -681,7 +742,6 @@ a {
     width: 90%;
     margin: 0 auto;
   }
-
 
   /* ABOUT SECTION */
 
@@ -694,20 +754,20 @@ a {
   .about-intro {
     padding: 0;
   }
-  
+
   .about {
     display: flex;
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
     color: #525e65;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, "Times New Roman", Times, serif;
   }
 
   .about-image {
     display: none;
   }
-  
+
   .about-image-mobile {
     width: 240px;
     height: auto;
@@ -716,17 +776,17 @@ a {
     margin-top: 30px;
     display: block;
   }
-  
-  .about-description{
+
+  .about-description {
     width: 100%;
     text-align: start;
     font-family: sans-serif;
   }
 
-  .skills-container{
+  .skills-container {
     margin-top: 30px;
   }
-  
+
   .skills {
     margin-top: 30px;
     display: flex;
@@ -734,28 +794,40 @@ a {
     text-align: start;
     font-weight: 800;
     font-size: 13px;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  .skills > div:nth-of-type(2) {
-    margin:0 30px;
+    font-family: "Courier New", Courier, monospace;
   }
 
-  .skill-arrow{
+  .skills > div:nth-of-type(2) {
+    margin: 0 30px;
+  }
+
+  .skill-arrow {
     color: #6c55e0;
     font-size: 8px;
     margin-right: 5px;
   }
 
+  .experience-container {
+    width: 90%
+  }
+
   /* PROJECT SECTION */
 
-  .project-heading {
+  .project-heading, .experience-heading {
     width: 90%;
     font-weight: bold;
     font-size: 37px;
   }
 
-  .project-heading::after {
+  .experience-heading ::after {
+    content: "";
+    display: block;
+    background-color: #aeb3be;
+    height: 1px;
+    width: 60%;
+  }
+
+  .project-heading::after{
     content: "";
     display: block;
     background-color: #aeb3be;
@@ -814,7 +886,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center ;
+    align-items: center;
   }
 
   .footer div:nth-of-type(1) {
@@ -822,7 +894,7 @@ a {
     padding-bottom: 10px;
   }
 
-   .footer div:nth-of-type(2) > div:nth-of-type(1) {
+  .footer div:nth-of-type(2) > div:nth-of-type(1) {
     margin-bottom: 15px;
     width: 100%;
   }
@@ -844,7 +916,7 @@ a {
   }
 }
 
-@media only screen and (max-width:290px) {
+@media only screen and (max-width: 290px) {
   .about-container {
     margin-top: 200px;
   }
