--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ a {
 .header {
   display: flex;
   justify-content: space-between;
+  width: 95%;
   align-items: center;
   height: 10vh;
   background-color: #001f23;
@@ -766,6 +767,7 @@ p > span:nth-of-type(1) {
   /* HAMBURGER SECTION */
   .header {
     padding: 50px 0;
+    width: 95%;
   }
 
   .hamburger-icon {
@@ -907,6 +909,28 @@ p > span:nth-of-type(1) {
 
   .experience-container {
     width: 90%;
+  }
+
+  /* Experience section */
+  .experience-container {
+    width: 95%;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .experience-section {
+    display: flex;
+    flex-direction: column;
+    height: 95vh;
+    gap: 5%;
+    padding: 20px;
+  }
+
+  .experience-companies {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
   }
 
   /* PROJECT SECTION */
